@@ -13,7 +13,7 @@ import motionseries.MotionSeriesDefaults._
 abstract class MotionSeriesChartNode(canvas: MotionSeriesCanvas, model: MotionSeriesModel)
         extends AbstractChartNode(canvas, model) {
   def forceGraph:MotionSeriesGraph = forceGraph(true)
-  def forceGraph(showGravityWallNormal: Boolean):MotionSeriesGraph= {
+  def forceGraph(showGravitySeries: Boolean):MotionSeriesGraph= {
     val parallelAppliedForceVariable = new DefaultTemporalVariable() {
       override def setValue(value: Double) = model.bead.parallelAppliedForce = value
     }
@@ -25,12 +25,12 @@ abstract class MotionSeriesChartNode(canvas: MotionSeriesCanvas, model: MotionSe
     val appliedForceSeries = new ControlGraphSeries(formatForce("forces.applied".translate), appliedForceColor, abbrevUnused, N, characterUnused, parallelAppliedForceVariable)
     val frictionSeries = new ControlGraphSeries(formatForce("forces.friction".translate), frictionForceColor, abbrevUnused, N, characterUnused, createParallelVariable(() => model.bead.frictionForce))
     val netForceSeries = new ControlGraphSeries(formatForce("forces.Net".translate), totalForceColor, abbrevUnused, N, characterUnused, createParallelVariable(() => model.bead.totalForce))
-    val forceSeriesList = if (showGravityWallNormal) {
+    val wallSeries = new ControlGraphSeries(formatForce("forces.Wall".translate), wallForceColor, abbrevUnused, N, characterUnused, createParallelVariable(() => model.bead.wallForce))
+    val forceSeriesList = if (showGravitySeries) {
       val gravitySeries = new ControlGraphSeries(formatForce("forces.Gravity".translate), gravityForceColor, abbrevUnused, N, characterUnused, createParallelVariable(() => model.bead.gravityForce))
-      val wallSeries = new ControlGraphSeries(formatForce("forces.Wall".translate), wallForceColor, abbrevUnused, N, characterUnused, createParallelVariable(() => model.bead.wallForce))
       appliedForceSeries :: frictionSeries :: gravitySeries :: wallSeries :: netForceSeries :: Nil
     }
-    else appliedForceSeries :: frictionSeries :: netForceSeries :: Nil
+    else appliedForceSeries :: frictionSeries :: wallSeries :: netForceSeries :: Nil
 
     val parallelForceControlGraph = new MotionSeriesGraph(appliedForceSeries, canvas, timeseriesModel, updateableObject, model) {
       for (s <- forceSeriesList.tail) addSeries(s)
