@@ -1,3 +1,4 @@
+Added the wall force to the forces and motion series charts
 Added spring graphics for bouncy walls
 Improved ramp color for ice mode
 Added a control for wall bounce independent of surface friction
